fix(stats): the color under the title differs from the background and the images are cropped

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1133,7 +1133,7 @@ body {
 
 .stats__title {
   position: absolute;
-  background: #070612;
+  background: #080715;
   width: 100%;
   text-align: center;
 }
@@ -1775,6 +1775,5 @@ body {
 .stats__slide {
   max-width: 1920px;
   margin: 0 auto;
-  overflow: hidden;
   position: relative;
 }
